fix homepage spacing

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -84,7 +84,7 @@
 .feature-section {
   width: 90%;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   flex-direction: column;
 }
@@ -93,7 +93,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 }
 
@@ -150,6 +150,7 @@
     flex-direction: column;
     top: 0;
     margin: 0;
+    height: 90vh;
   }
   .value-section:nth-child(3) {
     margin-top: -600px;
@@ -168,7 +169,7 @@
     font-size: 1.5rem;
     width: 100%;
     padding: 0;
-    margin-top: -180px;
+    margin-top: -120px;
     text-align: center;
   }
   #controlled {
